--- a/trunk/GraphicsEditor/GraphicsEditor/GraphicsEditor.vcxproj.filters
+++ b/trunk/GraphicsEditor/GraphicsEditor/GraphicsEditor.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="DrawingToolBar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Coordinates.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
