I recommend you to see it once! Things to be added! 1) Icons (drawings of pencil, eraser, spray,...) 2) Menu Items (File open, save)
Important Things:
1) Mouse Listeners and Mouse Handlers
2) Save and Load from a file

Most Important Things
(c) Info about Jinkchak and CK Inc to be added somewhere :)

--- a/GraphicsEditor/GraphicsEditor/GraphicsEditor.vcxproj
+++ b/GraphicsEditor/GraphicsEditor/GraphicsEditor.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="Canvas.h" />
     <ClInclude Include="ColorPanel.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="Coordinates.h" />
     <ClInclude Include="DrawingBoard.h" />
     <ClInclude Include="DrawingToolBar.h" />
     <ClInclude Include="MenuBar.h" />
