--- a/GraphicsEditor/GraphicsEditor/GraphicsEditor.vcxproj.filters
+++ b/GraphicsEditor/GraphicsEditor/GraphicsEditor.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClInclude Include="Coordinates.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Color.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Tool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
