--- a/GraphicsEditor/GraphicsEditor/GraphicsEditor.vcxproj.filters
+++ b/GraphicsEditor/GraphicsEditor/GraphicsEditor.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="Tool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Special_Tools.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
